<resources>
    <string name="app_name">Pueblo Magico</string>

    <string name="title_burrosBlancos">Burros Blancos</string>

    <string name="title_menu1">por verse</string>
    <string name="title_menu2">por verse</string>
    <string name="title_menu3">por verse</string>
    <string name="title_configuracion">Configuracion</string>
    <string name="title_compartir">Compartir</string>
    <string name="title_acerca">Acerca de</string>
    <string name="title_comunicacion">Comunicacion</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
