<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_menu1" />
        <item
            android:id="@+id/nav_menu2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_menu2" />
        <item
            android:id="@+id/nav_menu3"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_menu3" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_configuracion" />
    </group>

    <item android:title="@string/title_comunicacion">
        <menu>
            <item
                android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_compartir" />
            <item
                android:id="@+id/nav_acerca"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_acerca" />
        </menu>
    </item>

</menu>
